--- a/portfoliostyle.css
+++ b/portfoliostyle.css
@@ -1,11 +1,17 @@
-body{   
-    background-color:beige;
+body{
+    background-image: url("Untitled design (1).png");   
+    background-repeat: round;
     border-radius: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
    
 }
+h1{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-bottom: 0px;
+}
 .header{
-    margin-top:20px;
+    margin-top:0vw;
+    padding-top: 0vw;
     text-align: center;
     display: inline-block;
     justify-content: center;
@@ -14,22 +20,27 @@ body{
 #contactbar{
     font-family: cursive;
     border-radius: 5px;
-    height: 3vw;
+    height: 2vw;
     background-color:#223e3e;
     display:flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: 2vw;
+    font-size: 1vw;
+    column-gap: 15vw;
 }
 a{
-    margin-right: 120px;
+    color: aliceblue;
+
+    display: flex;
+    justify-content: end;
+
     text-decoration: none;
     border-radius: 5px;
 }
 header{
     
-    margin: 30px;
+    margin: 0px;
     border-spacing: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     border-radius: 5px;
@@ -42,22 +53,51 @@ header{
     
 }
 
-
-img{
-    
+.cose{
+    height: 350px;
 }
+
+
 .cat{
     border-radius: 5px;
-    margin: 30px;
+    margin: 0px;
     display: flex;
 }
 .ina{
+    font-size: 1.6vw;
     border-radius: 5px;
-    background-color: brown;
     display:flex;
-    margin-right: 20px;
+    margin: 20px;
     display: flex;
     height: 350px;
-    width: 350px;
-    box-shadow: 0 7px 21px 0 rgba(0,0,0,.1);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    box-shadow: 0 7px 21px 0 rgba(0,0,0,.7);
+}
+.csa{
+    font-size: 1.6vw;
+    border-radius: 5px;
+    display:flex;
+    margin: 20px;
+    display: flex;
+    height: 350px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    box-shadow: 0 7px 21px 0 rgba(0,0,0,.7);
+
+}
+p{
+    padding: 2vw;
+    border-radius: 5px;
+    color: yellow;
+    background-color:transparent;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+footer{
+    padding: 2vw;
+    border-radius: 5px;
+    background-color:rgb(42, 165, 157) ;
+    height: 12vw;
+    display: flex;
+    column-gap: 3vw;
 }
